# ai-sports-bot-nfl

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_DEBATE_INTEGRATION_GUIDE.md  CODE_QUALITY_FIXES_SUMMARY.md  CONTRIBUTING.md  GITHUB_READY_SUMMARY.md  LANGCHAIN_ENHANCEMENT_PLAN.md  LICENSE  PHASE_1B_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  README.md  README_UNIVERSAL_AGENT.md  SCALABLE_COMPARISON_ARCHITECTURE.md  api_response_PlayerStats_3929630_2022.json  api_response_PlayerStats_3929630_2024.json  debate_backend.py  demo_dynamic_debate.py  example.py  fastapi_server.py  find_more_players.py  fix_langgraph_issues.py  fix_season_calculation.py  main.py  minimal_backend.py  next.config.js  package-lock.json  package.json  programmatic_implementation_plan.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_backend.sh  run_frontend.sh  setup.py  setup_dev.sh  simple_backend.py  test_any_player.py  test_commercial_system.py  (+15 more)
.github/workflows/: ci.yml
.next/: trace
.next/server/: _error.js  pages-manifest.json
.next/server/pages/: _app.js  _error.js  index.js
.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
.next/static/chunks/: _error.js  webpack.js
.next/static/development/: _buildManifest.js
.next/static/webpack/: webpack.236bedb0171a7f44.hot-update.js
components/: DebateArena.js
components/ui/: badge.tsx  card.tsx  skeleton.tsx
config/: api_config.py
data/: sports_stats.db-journal
data/samples/: api_response_PlayerStats_3043078_2024.json  api_response_PlayerStats_3915511.json  api_response_PlayerStats_3916387.json
docs/: LangChain.md  PROJECT_STRUCTURE.md
docs/analysis/: CACHE_SOLUTION_SUMMARY.md  CACHE_STRATEGY.md
docs/architecture/: AGENT_INTEGRATION_SUMMARY.md  README_HYBRID.md
examples/: analyze_available_endpoints.py  bridge_demo.py  debug_touchdowns.py  hybrid_main.py
pages/: index.js
pages/api/: start-debate.js
pages/api/sports/: leaders.js
scripts/: fetch_sample_data.py  init_database.py  load_comprehensive_nba_data.py  migrate_to_sport_databases.py
scripts_backup/: fetch_sample_data.py  init_database.py  load_all_nba_players.py  load_full_data.py  load_nba_authenticated.py  load_nba_complete.py  load_nba_corrected.py  load_nba_fixed.py  load_nba_fixed_langgraph.py  load_nba_langchain_agents.py  load_nba_langgraph.py  load_nba_with_langchain.py  load_nba_working.py  load_nba_working_apis.py  load_sample_players.py
sports_bot_beta/: .gitignore  API_EFFICIENCY_ANALYSIS.md  agent_client.py  api_response_PlayerStats_14881.json  api_response_PlayerStats_3045282.json  api_response_PlayerStats_3122132.json  api_response_PlayerStats_4262921.json  api_response_PlayerStats_4361423.json  debate_integration.py  main.py  requirements.txt  response_formatter.py  sports_agents.py  stat_retriever.py  test_enhanced_processing.py  test_phase1.py  test_phase1_comprehensive.py
sports_bot_beta/docs/: STRUCTURE.md
sports_bot_beta/sampledata/: resp.json
sports_bot_beta/tests/: test_enhanced_processing.py  test_phase1_comprehensive.py
src/: agent_framework.py
src/sports_bot/: __init__.py
src/sports_bot/agents/: agent_config.py  agent_integration.py  base_agent.py  bridge.py  debate_agent.py  debate_integration.py  multi_agent_orchestrator.py  nba_debate_agent.py  runner.py  simple_debate_agent.py  smart_dynamic_agent.py  sports_agents.py  sports_commentary_agent.py  sports_workflow.py  universal_sports_agent.py
src/sports_bot/api/: client.py  endpoints.py  frontend_bridge.py  schemas.py  test_api_connection.py
src/sports_bot/commercial/: __init__.py  analytics.py  billing.py  circuit_breaker.py  gateway.py  monitoring.py  rate_limiter.py  streaming.py
src/sports_bot/config/: api_config.py  db_config.py  disambiguation_examples.py  player_disambiguation.py  sport_config.py
src/sports_bot/conversation/: __init__.py  conversational_sport_bot.py  sport_intelligent_context_extractor.py
src/sports_bot/core/: data_validators.py  exceptions.py  logging_config.py  response_formatter.py  shared_cache.py  test_api_connection.py  (+1 more)
styles/: globals.css
tests/: test_comprehensive_with_assertions.py  test_debate_agent.py  test_phase1.py
(+63 files in other folders)
